<package>
  <name>ros_ontology</name>
  <version>1.0.0</version>
  <description></description>
  <maintainer email="danielb@cs.uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://ease-crc.org</url>

  <author>Daniel Beßler</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
