<package>
  <name>ease_ontology</name>
  <version>1.0.0</version>
  <description>general categories of everyday activity that are applicable across multiple disciplines</description>
  <maintainer email="danielb@uni-bremen.de">Daniel Beßler</maintainer>

  <license>BSD</license>

  <url type="website">http://ease-crc.org</url>

  <author>Daniel Beßler</author>
  <author>Robert Porzel</author>
  <author>Mihai Pomarlan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dul</build_depend>
  <run_depend>dul</run_depend>
</package>
